# Eagle

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
eagle/: Cargo.toml
eagle/src/: adapters_lamquant.rs  lib.rs
lqs/: Cargo.toml  STANDARD.md
lqs/src/: adapter.rs  adapters_lamquant.rs  bands.rs  harness.rs  levels.rs  lib.rs  metrics.rs  report.rs  suites.rs
lqs/tests/: lqs_gate.rs  metrics_parity.rs  python_parity.rs
lqs/tests/golden/: metrics_parity.json
scripts/: lqs-fastgate.sh
tests/audits/: test_format_consistency.py
tests/benchmarks/: VALIDATION_PLAN.md  benchmark_ablation_matrix.py  benchmark_biological_fidelity.py  benchmark_c_parity.py  benchmark_cayley_rotation.py  benchmark_clinical_preservation.py  benchmark_compression_ratio.py  benchmark_decoder_e2e.py  benchmark_deployment_path.py  benchmark_detail_sparsity.py  benchmark_e2e_latency_stub.py  benchmark_fsq_entropy_activity.py  benchmark_fsq_validation.py  benchmark_fullband_error_heatmap.py  benchmark_latent_utilization.py  benchmark_lossless.py  benchmark_lpc_gain.py  benchmark_patient_spread.py  benchmark_rate_distortion.py  benchmark_report.py  benchmark_residual_fsq.py  benchmark_seizure_vs_quiescent.py  benchmark_spectral_fidelity.py  benchmark_subband_leakage.py  benchmark_tnn_memory.py  benchmark_xnor_cpop_stub.py  clinical_master_harness.py  paper_benchmark.py  run_all_benchmarks.py  test_golden_path_e2e.py
tests/internal/: README.md  __init__.py
tests/validation/: test_downstream_concordance.py  test_edf_cross_check.py  test_metrics_prd.py  test_moabb_concordance.py  test_nedc_erdr_runner.py  test_nedc_formatter.py  test_seizure_metrics.py
tools/: bench_chbmit.py  bench_edf_reader_parity.py  bench_gzip_baseline.sh  bench_moabb_concordance.py  bench_per_file_cr.py  bench_remaining_corpora.sh  bench_shannon_entropy.py  bench_tueg_subsets.py  chain_tueg_benches.sh  verify_paper_claims.py
tools/bench/bench_rs/: Cargo.toml
tools/hazard3_bench/: Cargo.toml  run_bench.sh
tools/hazard3_bench/src/: bench_encode.rs
tools/parity/: gen_golden.py
