# Eagle — LamQuant validation + benchmarking suite
#
# This repository is intentionally NOT a single Cargo workspace.
# tools/hazard3_bench/ and tools/bench/bench_rs/ each carry their own
# self-contained workspace declaration because they target different
# toolchains (riscv32imac for hazard3_bench, host for bench_rs).
#
# Build them explicitly:
#   cd tools/hazard3_bench && cargo build --target riscv32imac-unknown-none-elf
#   cd tools/bench/bench_rs && cargo build
#
# Both pull lamquant-firmware from the Lossless codec repo over a pinned
# git-rev (no sibling layout required) — see the root README "Dependencies"
# section for the standalone clone + build steps.
#
# Python-side tools (tools/*.py + tools/*.sh) work standalone — they
# install the lamquant-codec wheel from LamQuant-Lossless via pip and
# read evidence JSON from a local `evidence/` directory (populated by
# running the benches against a real EEG corpus).
[workspace]
resolver = "2"
# `eagle` consumes the vendor-neutral LQS standard (github.com/Quitetall/LQS),
# pulled via a sibling-clone path dep (see eagle/Cargo.toml). Clone LQS next
# to this repo. The old in-repo `lqs/` crate was carved out to its own repo.
members = ["eagle"]
