[package]
name = "lqs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "LQS — vendor-neutral EEG codec benchmark standard"

[lib]
name = "lqs"
path = "src/lib.rs"

[[bin]]
name = "eagle-lqs"
path = "src/bin/eagle_lqs.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# flate2 with default features = pure-Rust miniz_oxide backend (NO system zlib).
# Used by the gzip reference adapter so CI has no system dependency.
flate2 = "1"
# Optional zstd adapter — NOT enabled by default to keep CI sysdep-free.
zstd = { version = "0.13", optional = true }

[features]
default = []
zstd = ["dep:zstd"]
