[package]
name = "bench_rs"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "bench_rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

[dependencies]
lamquant-firmware = { git = "https://github.com/Quitetall/LamQuant-Lossless.git", rev = "abcae4794c38b3d3e75d3c214063cf0307e3daba", default-features = false }

# Standalone host workspace — do NOT inherit the embedded target.
[workspace]
