[package]
name = "bench_rs"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "bench_rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

[dependencies]
lamquant-firmware = { git = "https://github.com/Quitetall/LamQuant-Lossless.git", rev = "5ba00732d19803377ea648b1a198fda14690b119", default-features = false }

# Standalone host workspace — do NOT inherit the embedded target.
[workspace]
